# tap-sigma

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
scripts/: update_catalog.py
tap_sigma/: auth.py  client.py  streams.py  tap.py
tap_sigma/schemas/: __init__.py  account_types.json  connections.json  data_model_columns.json  data_model_elements.json  data_model_materialization_schedules.json  data_model_tags.json  data_models.json  dataset_grants.json  dataset_materializations.json  dataset_sources.json  datasets.json  files.json  member_teams.json  members.json  tags.json  teams.json  templates.json  translation_files.json  user_attributes.json  workbook_columns.json  workbook_controls.json  workbook_elements.json  workbook_materialization_schedules.json  workbook_page_elements.json  workbook_pages.json  workbook_queries.json  workbook_schedules.json  workbooks.json  workspaces.json
tap_sigma/streams/: __init__.py  data_models.py  datasets.py  generic.py  members.py  workbooks.py
tests/: test_core.py
