[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "tap-sigma"
version = "0.1.0"
description = "Singer tap for Sigma Computing API, built with the Meltano Singer SDK"
readme = "README.md"
keywords = [
  "ELT",
  "Meltano",
  "Sigma",
  "Sigma Computing",
  "Singer",
]
license = "Apache-2.0"
authors = [ { name = "Kevin Sampson", email = "k.sampson@vertexservicepartners.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "backports-httpmethod>=0.2.1",
  "requests~=2.32",
  "singer-sdk~=0.53.4",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
urls.Homepage = "https://github.com/yourusername/tap-sigma"
urls.Repository = "https://github.com/yourusername/tap-sigma"
scripts.tap-sigma = "tap_sigma.tap:TapSigma.cli"

[dependency-groups]
dev = [
  "requests-cache>=1.2.1",
  "singer-sdk[testing]",
  { include-group = "autoupdate" },
  { include-group = "lint" },
  { include-group = "typing" },
]
autoupdate = [
  "singer-sdk",
  "toolz~=1.1.0",
  "urllib3>=2",
]
lint = [
  "ruff>=0.14.10",
]
testing = [
  "pytest>=9",
  "requests>=2.32",
]
typing = [
  "mypy>=1.19.1",
  "ty>=0.0.9",
  "types-requests>=2.32.4.20260107",
  { include-group = "autoupdate" },
  { include-group = "testing" },
]

[tool.ruff]
line-length = 100
lint.select = [ "ALL" ]
lint.per-file-ignores."tests/*" = [
  "S101", # Allow assert in tests
]
lint.flake8-annotations.allow-star-arg-any = true
lint.pydocstyle.convention = "google"

[tool.mypy]
follow_untyped_imports = true
warn_unused_ignores = true
