[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "tap-sigma"
description = "Singer tap for Sigma Computing API, built with the Meltano Singer SDK"
readme = "README.md"
keywords = [
  "ELT",
  "Meltano",
  "Sigma",
  "Sigma Computing",
  "Singer",
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "backports-httpmethod>=0.2.1",
  "requests~=2.32",
  "singer-sdk~=0.53.4",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
[[project.authors]]
name = "Kevin Sampson"
email = "k.sampson@vertexservicepartners.com"
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-sigma = "tap_sigma.tap:TapSigma.cli"
[project.urls]
Homepage = "https://github.com/MeltanoLabs/tap-sigma"
Repository = "https://github.com/MeltanoLabs/tap-sigma"

[dependency-groups]
dev = [
  "requests-cache>=1.2.1",
  "singer-sdk[testing]",
  { include-group = "autoupdate" },
  { include-group = "lint" },
  { include-group = "typing" },
]
autoupdate = [
  "singer-sdk",
  "toolz~=1.1.0",
  "urllib3>=2",
]
lint = [
  "ruff>=0.15.11",
]
testing = [
  "pytest>=9.0.3",
  "requests>=2.32",
]
typing = [
  "mypy>=1.20.1",
  "ty>=0.0.31",
  "types-requests>=2.33.0.20260408",
  { include-group = "autoupdate" },
  { include-group = "testing" },
]

[tool.hatch]
[tool.hatch.version]
fallback-version = "0.0.0dev0"
source = "vcs"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = [ "ALL" ]
per-file-ignores."tests/*" = [
  "S101", # Allow assert in tests
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
follow_untyped_imports = true
warn_unused_ignores = true
